# 3-Cool-Pet-Projects

./: README.md
ENS/server/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
ENS/server/apps/contacts/: admin.py  models.py  utils.py
ENS/server/apps/contacts/api/: serializers.py  throttle.py  urls.py  views.py
ENS/server/apps/contacts/migrations/: 0001_initial.py
ENS/server/apps/contacts/tests/: test_models.py  test_serializers.py  test_views.py
ENS/server/apps/notifications/: admin.py  models.py  tasks.py  utils.py
ENS/server/apps/notifications/api/: serializers.py  urls.py  views.py
ENS/server/apps/notifications/migrations/: 0001_initial.py  0002_remove_notificationtemplate_send_time.py
ENS/server/apps/reports/: admin.py  models.py  tasks.py
ENS/server/apps/reports/api/: serializers.py  urls.py  views.py
ENS/server/apps/reports/migrations/: 0001_initial.py  0002_alter_notificationstate_contact_and_more.py  0002_notificationsession_created_at.py  0003_alter_notificationsession_created_at.py  0003_remove_notificationstate_notification_template_and_more.py  0004_notificationsession_report_file.py  0004_rename_noticication_session_notificationstate_notification_session.py  0005_notificationsession_scheduled_time.py
ENS/server/apps/users/: admin.py  managers.py  models.py
ENS/server/apps/users/api/: serializers.py  views.py
ENS/server/apps/users/migrations/: 0001_initial.py
ENS/server/server/: .env.example  asgi.py  celery.py  urls.py  wsgi.py
ENS/server/server/settings/: base.py  development.py  production.py
Pastebin Analog/: .gitignore  docker-compose.yml  pyproject.toml
Pastebin Analog/client/: package-lock.json  package.json
Pastebin Analog/client/public/: index.html
Pastebin Analog/client/src/: App.css  App.js
Pastebin Analog/client/src/API/: APIService.js
Pastebin Analog/client/src/components/ErrorMessage/: ErrorMessage.jsx  ErrorMessage.styled.jsx
Pastebin Analog/client/src/components/Header/: Header.jsx  Header.styled.jsx
Pastebin Analog/client/src/components/LoginModal/: LoginModal.jsx  LoginModal.styled.jsx
Pastebin Analog/client/src/context/: AuthContext.js
Pastebin Analog/server/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
Pastebin Analog/server/apps/texts/: admin.py  models.py
Pastebin Analog/server/apps/texts/api/: serializers.py  urls.py  views.py
Pastebin Analog/server/apps/texts/services/: hash.py
Pastebin Analog/server/apps/texts/test/: test_models.py
Pastebin Analog/server/apps/texts/tests/: test_models.py  test_serializers.py  test_views.py
Pastebin Analog/server/apps/users/: admin.py  authentication.py  models.py
Pastebin Analog/server/apps/users/api/: serializers.py  views.py
Pastebin Analog/server/server/: example.env  settings.py  urls.py  yasg.py
Pastebin Analog/server/server/logging/: middleware.py
Pastebin Analog/server/server/settings/: base.py  development.py
(+8 files in other folders)
