[tool.poetry]
name = "ens"
version = "0.1.0"
description = "Emergency Notification System"
authors = ["Madjar Evan <evanmadjar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.1.0"
django-jazzmin = "^2.6.0"
drf-yasg = "^1.21.6"
django-environ = "^0.10.0"
djangorestframework-simplejwt = "^5.2.2"
django-phonenumber-field = "5.2.0"
phonenumbers = "8.12.33"
coreapi = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
