[tool.poetry]
name = "ens"
version = "0.1.0"
description = "Emergency Notification System"
authors = ["Madjar Evan <evanmadjar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "3.14.0"
django-cors-headers = "4.1.0"
django-jazzmin = "2.6.0"
drf-yasg = "1.21.6"
django-environ = "0.10.0"
djangorestframework-simplejwt = "5.2.2"
django-phonenumber-field = "5.2.0"
phonenumbers = "8.12.33"
coreapi = "2.3.3"
openpyxl = "3.1.2"
pyspellchecker = "0.7.2"
psycopg2-binary = "2.9.6"
django-extensions = "3.2.3"
celery = {extras = ["autoreload"], version = "^5.3.1"}
amqp = "5.1.1"
asgiref = "3.7.2"
async-timeout = "4.0.2"
billiard = "4.1.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
coreschema = "0.0.4"
django = "4.2.2"
et-xmlfile = "1.1.0"
idna = "3.4"
inflection = "0.5.1"
itypes = "1.2.0"
jinja2 = "3.1.2"
kombu = "5.3.1"
markupsafe = "2.1.3"
packaging = "23.1"
prompt-toolkit = "3.0.38"
pyjwt = "2.7.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
pyyaml = "6.0"
redis = "4.6.0"
requests = "2.31.0"
six = "1.16.0"
sqlparse = "0.4.4"
typing-extensions = "4.6.3"
tzdata = "2023.3"
uritemplate = "4.1.1"
urllib3 = "2.0.3"
vine = "5.0.0"
wcwidth = "0.2.6"
flower = "^2.0.0"
twilio = "^8.4.0"
eventlet = "^0.33.3"
gevent = "^22.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
